tests/error/enum_errors/duplicate_variant_tuple.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    A, A = {}, {}  # noqa: RUF012


MyEnum.compile()
  