tests/error/enum_errors/duplicate_variant_tuple.err
Error: Duplicate variant (at $FILE:6:7)
  | 
4 | @guppy.enum
5 | class MyEnum:
6 |     A, A = {}, {}  # noqa: RUF012
  |        ^ Enum `MyEnum` already contains a variant named `A`

Guppy compilation failed due to 1 previous error
